--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ SAV方法和其他方法的比较/投影方法的比较/.vscode/settings.json
 *.vtu
 *.pvd
 *.json
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9/recompile.sh
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9/README
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9/error.log.old
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9/error.log
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_41cee20742055fb7529891d1a8f172c6/README
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_41cee20742055fb7529891d1a8f172c6/recompile.sh
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_41cee20742055fb7529891d1a8f172c6/error.log
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_41cee20742055fb7529891d1a8f172c6/dolfin_subdomain_41cee20742055fb7529891d1a8f172c6.cpp
+SAV方法和其他方法的比较/整体求解的比较/jitfailure-dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9/dolfin_subdomain_4b905d16a44dd28a6317d49a990953c9.cpp
