--- a/cpp_to_python/CMakeLists.txt
+++ b/cpp_to_python/CMakeLists.txt
@@ -10,6 +10,7 @@ include(${DOLFIN_USE_FILE})
 
 # Add pybin11 module
 pybind11_add_module(test_function test_function.cpp)
+pybind11_add_module(test_vector test_vector.cpp)
 
 # Target the library
 target_link_libraries(${PROJECT_NAME} PRIVATE dolfin)
