--- a/cpp_to_python/CMakeLists.txt
+++ b/cpp_to_python/CMakeLists.txt
@@ -11,6 +11,8 @@ include(${DOLFIN_USE_FILE})
 # Add pybin11 module
 pybind11_add_module(test_function test_function.cpp)
 pybind11_add_module(test_vector test_vector.cpp)
+pybind11_add_module(test_struct_vector test_struct_vector.cpp)
 
 # Target the library
-target_link_libraries(${PROJECT_NAME} PRIVATE dolfin)
+target_link_libraries(test_function PRIVATE dolfin)
+target_link_libraries(test_struct_vector PRIVATE dolfin)
