--- a/cpp_to_python/CMakeLists.txt
+++ b/cpp_to_python/CMakeLists.txt
@@ -9,13 +9,11 @@ find_package(DOLFIN REQUIRED)
 include(${DOLFIN_USE_FILE})
 
 # Add pybin11 module
-pybind11_add_module(test_function test_function.cpp)
-pybind11_add_module(test_vector test_vector.cpp)
-pybind11_add_module(test_struct_vector test_struct_vector.cpp)
 pybind11_add_module(IBMesh IBMesh.cpp)
+pybind11_add_module(IBInterpolation IBMesh.cpp utilities.cpp)
 
 
 # Target the library
-target_link_libraries(test_function PRIVATE dolfin)
-target_link_libraries(test_struct_vector PRIVATE dolfin)
 target_link_libraries(IBMesh PRIVATE dolfin)
+target_link_libraries(IBInterpolation PRIVATE dolfin)
+
