编译通过，并且能完成测试

--- a/cpp_to_python/CMakeLists.txt
+++ b/cpp_to_python/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${DOLFIN_USE_FILE})
 
 # Add pybin11 module
 pybind11_add_module(IBMesh SHARED IBMesh.cpp)
-pybind11_add_module(IBInterpolation SHARED IBInterpolation.cpp utilities.cpp)
+pybind11_add_module(IBInterpolation SHARED IBInterpolation.cpp)
 
 # Target the library
 target_link_libraries(IBMesh PRIVATE dolfin)
